Product endpoints documentation
