# schemas/openapi.yaml
@@ -117,7 +117,7 @@ paths:
             application/json:
               schema:
                 $ref: ./message.json#/definitions/message
-  /login:
+  /users/login:
     post:
       tags:
         - Users
@@ -143,7 +143,7 @@ paths:
             application/json:
               schema:
                 $ref: ./message.json#/definitions/message
-  /refresh:
+  /users/refresh:
     post:
       tags:
         - Users
@@ -165,6 +165,125 @@ paths:
                 $ref: ./token.json#/definitions/token
         '400':
           description: Token not found or invalid
+          content:
+            application/json:
+              schema:
+                $ref: ./message.json#/definitions/message
+  /products:
+    description: This resource represents products of the system.
+    get:
+      tags:
+        - Products
+      description:
+        View all products
+      responses:
+        '200':
+          description: View of all products
+          content:
+            application/json:
+              schema:
+                $ref: ./product.json#/definitions/productsAll
+    post:
+      tags:
+        - Products
+      description:
+        Create a new product
+      requestBody:
+        description: Product data
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: ./product.json#/definitions/productCreate 
+      responses:
+        '201':
+          description: Product created
+          content:
+            application/json:
+              schema:
+                $ref: ./product.json#/definitions/product
+        '400':
+          description: Validation failed
+          content:
+            application/json:
+              schema:
+                $ref: ./message.json#/definitions/message
+        '401':
+          description: Only admin users can add new products
+          content:
+            application/json:
+              schema:
+                $ref: ./message.json#/definitions/message
+  /products/{id}:
+    get:
+      tags:
+        - Products
+      description:
+        View a product by id
+      responses:
+        '200':
+          description: View of a product
+          content:
+            application/json:
+              schema:
+                $ref: ./product.json#/definitions/product
+        '404':
+          description: Product does not exist
+          content:
+            application/json:
+              schema:
+                $ref: ./message.json#/definitions/message
+    put:
+      tags:
+        - Products
+      description:
+        Update a product by id
+      requestBody:
+        description: Product data
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: ./product.json#/definitions/productUpdate
+      responses:
+        '200':
+          description: Update successful
+          content:
+            application/json:
+              schema:
+                $ref: ./message.json#/definitions/message
+        '400':
+          description: Product could not be updated
+          content:
+            application/json:
+              schema:
+                $ref: ./message.json#/definitions/message
+        '401':
+          description: Only admin users can update products
+          content:
+            application/json:
+              schema:
+                $ref: ./message.json#/definitions/message
+    delete:
+      tags:
+        - Products
+      description:
+        Delete a product by id
+      responses:
+        '200':
+          description: Deletion successful
+          content:
+            application/json:
+              schema:
+                $ref: ./message.json#/definitions/message
+        '400':
+          description: Product could not be deleted
+          content:
+            application/json:
+              schema:
+                $ref: ./message.json#/definitions/message
+        '401':
+          description: Only admin users can delete products
           content:
             application/json:
               schema:
